--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer components {
   .input {
   @apply  rounded-full px-4 py-2 border border-stone-200 text-sm transition-all duration-300  
-            focus:outline-none focus:ring focus:ring-yellow-400 w-full md:px-6 md:py-3
+            focus:outline-none focus:ring focus:ring-yellow-400 w-full md:px-6 md:py-3 mb-4
   }
 }
 /* body {
